# mcga

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SWIFT_REWRITE.md  build.rs  custom_parsers.example.json
.github/workflows/: ci.yml  release.yml
Packaging/: Info.plist
Sources/MCGA/: MCGAApp.swift
Sources/MCGACore/: ClipboardToolParsers.swift  HistoryStore.swift  NetworkParsers.swift  ParseResult.swift  ParserEngine.swift  ValueParsers.swift
Sources/MCGASmokeTests/: main.swift
macos/: Package.resolved  Package.swift  SWIFT_REWRITE.md
macos/Packaging/: AppIcon.icns  Info.plist
macos/Sources/MCGA/: MCGAApp.swift
macos/Sources/MCGACore/: ClipboardToolParsers.swift  CustomCommandParser.swift  Generators.swift  HistoryStore.swift  NetworkParsers.swift  ParserEngine.swift  ParserUtilities.swift  TextParsers.swift  ValueParsers.swift
macos/Sources/MCGASmokeTests/: main.swift
macos/scripts/: build-macos-app.sh  package-macos-dmg.sh
scripts/: build-macos-app.sh  generate-icon.swift
src/: config.rs  config_file.rs  gcd.rs  history.rs  lib.rs  main.rs  monitor.rs  notifier.rs  overlay.rs  text.rs
src/parser/: base64.rs  base64_decode.rs  cidr.rs  cron.rs  dns.rs  engine.rs  generate.rs  hash.rs  ip.rs  ipv6.rs  json.rs  json5.rs  mod.rs  objectid.rs  timestamp.rs  uuid.rs  yaml.rs
windows/: App.xaml  App.xaml.cs  AppLogger.cs  AppPreferences.cs  ClipboardModel.cs  ClipboardPopoverWindow.xaml  ClipboardPopoverWindow.xaml.cs  FloatingOverlayWindow.xaml  FloatingOverlayWindow.xaml.cs  MCGA.csproj  NullToVisibilityConverter.cs  Program.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  StartupManager.cs  TrayIconView.xaml  TrayIconView.xaml.cs
windows/MCGACore/: ContentParser.cs  CustomCommandParser.cs  Generators.cs  HistoryStore.cs  NetworkParsers.cs  ParseResult.cs  ParserEngine.cs  ParserUtilities.cs  TextParsers.cs  ValueParsers.cs
