[package]
name = "mcga"
version = "0.1.0"
edition = "2021"
authors = ["jimyag"]
description = "My Clipboard Guard Assistant - A powerful clipboard parsing tool"
license = "MIT"

[dependencies]
arboard = "3.6.1"
notify-rust = "4.11.7"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.11", features = ["v1", "v4", "v5"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "6.0"

