[package]
name = "mcga"
version = "0.1.0"
edition = "2021"
authors = ["jimyag"]
description = "My Clipboard Guard Assistant - A powerful clipboard parsing tool"
license = "MIT"

[dependencies]
arboard = "3.6.1"
notify-rust = "4.11.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSGeometry",
    "NSString",
    "NSObject",
    "NSThread",
    "NSRange",
    "NSNotification",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSWindow",
    "NSPanel",
    "NSView",
    "NSScrollView",
    "NSText",
    "NSTextView",
    "NSColor",
    "NSFont",
    "NSFontDescriptor",
    "NSScreen",
    "NSGraphics",
    "NSEvent",
    "NSPasteboard",
    "NSTextContainer",
    "NSButton",
    "NSControl",
    "NSCell",
    "NSVisualEffectView",
] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
json5 = "0.4"
getrandom = "0.2"
toml = { version = "0.8", features = ["preserve_order"] }
serde_yml = "0.0"
uuid = { version = "1.11", features = ["v1", "v4", "v5", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "6.0"

